--- a/assets/scss/_styles-formulario.scss
+++ b/assets/scss/_styles-formulario.scss
@@ -1,3 +1,5 @@
+$color-error: rgb(231, 0, 0);
+
 .formulario {
     width: 100%;
     font-size: 16px;
@@ -7,12 +9,12 @@
       flex-direction: column;
       margin-top: 18px;
 
-      label{
+      &-label{
         font-weight: 600;
         font-size: calc(1em + 4px);
       }
 
-      input {
+      &-input {
         font-size: calc(1em + 4px);
         margin-top: 10px;
         padding: 6px;
@@ -20,18 +22,9 @@
         outline: none;
         border: 1px solid rgb(185, 185, 185);
         border-radius: 5px;
-
-        &::placeholder {
-          color: rgb(196, 196, 196);
-          font-size: calc(1em - 2px);
-        }
-
-        &:hover, &:focus {
-          border: 1px solid rgb(136, 136, 136);
-        }
       }
 
-      textarea {
+      &-textarea {
         border-radius: 5px;
         font-size: calc(1em + 4px);
         font-family: Arial;
@@ -41,16 +34,31 @@
         padding: 6px;
         width: 100%;
         height: 70vh;
+      }
 
+      &-input, &-textarea {
         &::placeholder {
-          color: rgb(170, 170, 170);
+          color: rgb(196, 196, 196);
           font-size: calc(1em - 2px);
-          margin-left: 6px;
         }
 
         &:hover, &:focus {
-          border: 1px solid rgb(136, 136, 136);
+          border: 1px solid rgb(48, 48, 48);
         }
+      }
+
+      &-input--error, &-textarea--error {
+        border: 1px solid $color-error; 
+
+        &:hover, &:focus {
+          border: 1px solid $color-error;
+        }
+      }
+
+      &-mensaje {
+        font-weight: 600px;
+        text-align: right;
+        color: $color-error;
       }
       
     }
