Transiciones para ser utilizadas en las vistas
Hasta ahora, la vista inicial y la de agregar-nota tienen estas transiciones. Les permiten mostrar una transiciones al entrar a la vista. Ejemplo, la de agregar-nota tiene una transicion de derecha, donde todo el contenido aparece y se translada de izquierda a derecha. Y la vista inicial, la transicion es izquierda, donde todo el contenido aparece y se translada de derecha a izquierda.
Tambien se renombraron algunos estilos scss a español

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,6 @@
-@import 'styles-formulario';
-@import 'styles-boton';
+@import 'estilos-formulario';
+@import 'estilos-boton';
+@import 'transicion';
 
 .central {
     @extend %flex-center;
