Agregado al proyecto AlertifyJs y alertas al presionar en regresar
Los css y js ya estan vinculados al nuxt.config.js. Y ahora, al dar clic en el boton de regresar en la vista de editar-nota y agregar-nota, si se escribio algo, se muestran alertas para verificar que se quiera abandonar y por ende, explicar que no se guardara lo escrito.

--- a/assets/scss/_colores.scss
+++ b/assets/scss/_colores.scss
@@ -2,5 +2,9 @@ $color-gris: rgb(218, 218, 218);
 $color-gris-secundario: rgb(209, 209, 209);
 $color-gris-terciario: rgb(199, 199, 199);
 
+$color-rojo: rgb(214, 35, 35);
+$color-rojo-secundario: rgb(201, 33, 33);
+$color-rojo-terciario: rgb(190, 32, 32);
+
 $color-negro: black;
 $color-blanco: white;
