Ahora la app cuenta con modo oscuro

--- a/assets/scss/_colores.scss
+++ b/assets/scss/_colores.scss
@@ -7,4 +7,9 @@ $color-rojo-secundario: rgb(201, 33, 33);
 $color-rojo-terciario: rgb(190, 32, 32);
 
 $color-negro: black;
+$color-negro-secundario: rgb(48, 48, 48);
+$color-negro-terciario: rgb(80, 80, 80);
+
 $color-blanco: white;
+$color-blanco-secundario: rgb(245, 245, 245);
+$color-blanco-terciario: rgb(236, 236, 236);
