El encabezado que se repite por cada vista, es ahora un Bloque independiente siguiendo la metodologia BEM
Los estilos estan en un archivo scss y es importado por el main.scss para ser vinculado en los global css del nuxt.config.js y asi estar accesibles esos estilos

--- a/assets/scss/_colores.scss
+++ b/assets/scss/_colores.scss
@@ -13,3 +13,7 @@ $color-negro-terciario: rgb(80, 80, 80);
 $color-blanco: white;
 $color-blanco-secundario: rgb(245, 245, 245);
 $color-blanco-terciario: rgb(236, 236, 236);
+
+///////////////////////////////////////////////
+
+$color-fondo-oscuro: #121212;
