--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'estilos-formulario';
 @import 'estilos-boton';
 @import 'estilos-boton-alerfityjs';
+@import 'estilos-encabezado';
 @import 'transicion';
 
 .central {
