Se permite ahora un titulo con 50 caracteres, y la nota con 5000 caracteres como maximo. Y tambien hay otros cambios en las otras vistas y componentes como mejora en escritura del codigo
Entre esas mejores, se fueron corrigiendo algunos detalles como los comentarios e indentacion...

--- a/assets/scss/_estilos-encabezado.scss
+++ b/assets/scss/_estilos-encabezado.scss
@@ -11,7 +11,7 @@
 
     display: grid;
     grid-template-areas: "regresar titulo acciones";
-    grid-template-columns: 50px 70% auto;
+    grid-template-columns: 50px auto auto;
 
     &__regresar {
       grid-area: regresar;
