--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,7 +4,7 @@
 @import 'estilos-encabezado';
 @import 'transicion';
 
-.central {
+.centrar {
     display: flex;
     justify-content: center;
     align-items: center;
