Color de fondo en modo oscuro un poco mas claro y modificada valores de las variables de colores grises
Anteriormente el fondo era un poco mas negro oscuro. Ahora, es mas claro y se ve visualmente mejor. Y se tuvieron que cambiar tambien, un poco, las variables que contienen los colores grises.

--- a/assets/scss/_estilos-encabezado.scss
+++ b/assets/scss/_estilos-encabezado.scss
@@ -57,12 +57,12 @@
         justify-content: flex-end;
 
         i {
-            color: #ccc;
+            color: $color-gris-terciario;
             font-size: calc(1em + 4px);
             margin-right: 16px;
 
             &:hover {
-                color: rgb(177, 177, 177);
+                color: rgb(150, 150, 150);
                 cursor: pointer;
             }
         
