Agregado titulos a cada icono de accion (actua como boton) en el encabezado, y estilos para mostrar un fondo en cada icono al hacer clic en ellos
Utilizacion del elemento HTML title, para mostrar una descripcion en cada icono de accion que estan en el encabezado para mostrar, al dejar en mouse sobre el, una titulo de lo que hace ese icono (boton). Tambien, ahora al hacer clic en alguno de ellos, se muestra un fondo un poco mas grande del tamaño del icono. Para que el usuario pueda ver mejor, que ha hecho clic en el.

--- a/assets/scss/_estilos-encabezado.scss
+++ b/assets/scss/_estilos-encabezado.scss
@@ -56,19 +56,21 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+        margin-right: 16px;
 
         i {
-            color: $color-gris-terciario;
+            color: $color-negro-terciario;
             font-size: calc(1em + 4px);
-            margin-right: 16px;
+            padding: 6px;
+            margin: 2px;
 
             &:hover {
-                color: rgb(150, 150, 150);
+                background-color: $color-gris;
                 cursor: pointer;
             }
         
             &:active {
-            color: rgb(129, 129, 129);
+                background-color: $color-gris-secundario;
             }
         }
     }
@@ -83,13 +85,5 @@
 .encabezado__acciones--oscuro{
     i {
         color: $color-blanco-secundario;
-
-        &:hover {
-            color: $color-blanco-terciario;
-        }
-          
-        &:active {
-            color: $color-blanco-terciario;
-        }
     }
 }
