Creada page acerca-de. Hija de la page inicio
Contiene informacion basica de la aplicacion, asi como enlaces a redes sociales del desarrollador, si necesitan contactarlo, y enlace al repositorio de la aplicacion. Faltan las rutas URL para esos enlaces. Y esta vista cuenta con su propia transicion de entrada.

--- a/assets/scss/_transicion.scss
+++ b/assets/scss/_transicion.scss
@@ -47,3 +47,14 @@
     opacity: 0;
     transform: translateX(-20px);
   }
+
+  ///////////////////////////////////////////
+
+  .transicion-aparecer-enter {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  .transicion-aparecer-enter-active {
+    transition: 0.2s all;
+  }
