--- a/assets/scss/_estilos-formulario.scss
+++ b/assets/scss/_estilos-formulario.scss
@@ -35,6 +35,9 @@ $color-input-oscuro: rgb(66, 66, 66);
         padding: 6px;
         width: 100%;
         height: 70vh;
+        resize: vertical;
+        min-height: 70vh;
+        max-height: 70vh;
       }
 
       &-input, &-textarea {
