Al encabezado, agregada propiedad css font-size y a la page acerca-de, agregado @media queries
Al agregar un @media a la page, que permite que el texto sea un poco mas grande si se supera un limite. El encabezado tambien tomaban esos estilos, por lo tanto, se le tuvo que colocar su propio font-size

--- a/assets/scss/_estilos-encabezado.scss
+++ b/assets/scss/_estilos-encabezado.scss
@@ -1,6 +1,7 @@
 @import "colores";
 
 .encabezado {
+    font-size: 16px;
     background: $color-blanco;
     color: inherit;
     transition: all 0.3s;
